--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main class="main containerA">
         <section class="slogan containerA">
-            <div class="imgMen sloganBlock containerB">
+            <div class="imgMen sloganBlock">
                 <img src="./img/MenOnPinckBackround.svg" alt="men">
                 <div class="stickAndText containerB">
                     <h1 class="text">THE BRAND</h1>
@@ -40,6 +40,7 @@
             <div class="blockImgCatalog">
                 <img src="./img/ImgCatalogWomen.svg" alt="for women">
                 <div class="backroundCatalog">
+                    <img src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>30% OFF</p>
                         <h3>FOR WOMEN</h3>
@@ -50,6 +51,7 @@
             <div class="blockImgCatalog">
                 <img src="./img/ImgCatalogMen.svg" alt="for men">
                 <div class="backroundCatalog">
+                    <img src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>HOT DEAL</p>
                         <h3>FOR MEN</h3>
@@ -60,6 +62,7 @@
             <div class="blockImgCatalog">
                 <img src="./img/ImgCatalogKids.svg" alt="for kids">
                 <div class="backroundCatalog">
+                    <img src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>NEW ARRIVALS</p>
                         <h3>FOR KIDS</h3>
@@ -70,6 +73,7 @@
             <div class="blockImgCatalog">
                 <img src="./img/ImgCatalogAccesories.svg" alt="accesories">
                 <div class="backroundCatalog">
+                    <img src="./img/bigBackround.svg" alt="none">
                     <div class="textCatalog">
                         <p>LUXIROUS & TRENDY</p>
                         <h3>ACCESORIES</h3>
@@ -120,7 +124,7 @@
                         <p class="aboutText"> 
                             Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
                         </p>
-                        <p class="proce">$52.00</p>
+                        <p class="price">$52.00</p>
                     </div>
                 </div>
             </div>
