--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main class="main containerA">
         <section class="slogan containerA">
-            <div class="imgMen sloganBlock">
+            <div class="imgMen sloganBlock containerB">
                 <img src="./img/MenOnPinckBackround.svg" alt="men">
                 <div class="stickAndText containerB">
                     <h1 class="text">THE BRAND</h1>
@@ -38,9 +38,9 @@
 
         <section class="contentCatalog containerB">
             <div class="blockImgCatalog">
-                <img src="./img/ImgCatalogWomen.svg" alt="for women">
+                <img class="imgBlock" src="./img/ImgCatalogWomen.svg" alt="for women">
                 <div class="backroundCatalog">
-                    <img src="./img/backround.svg" alt="none">
+                    <img class="backroundImg" src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>30% OFF</p>
                         <h3>FOR WOMEN</h3>
@@ -49,9 +49,9 @@
             </div>
 
             <div class="blockImgCatalog">
-                <img src="./img/ImgCatalogMen.svg" alt="for men">
+                <img class="imgBlock" src="./img/ImgCatalogMen.svg" alt="for men">
                 <div class="backroundCatalog">
-                    <img src="./img/backround.svg" alt="none">
+                    <img class="backroundImg" src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>HOT DEAL</p>
                         <h3>FOR MEN</h3>
@@ -60,9 +60,9 @@
             </div>
 
             <div class="blockImgCatalog">
-                <img src="./img/ImgCatalogKids.svg" alt="for kids">
+                <img class="imgBlock" src="./img/ImgCatalogKids.svg" alt="for kids">
                 <div class="backroundCatalog">
-                    <img src="./img/backround.svg" alt="none">
+                    <img class="backroundImg" src="./img/backround.svg" alt="none">
                     <div class="textCatalog">
                         <p>NEW ARRIVALS</p>
                         <h3>FOR KIDS</h3>
@@ -71,16 +71,15 @@
             </div>
 
             <div class="blockImgCatalog">
-                <img src="./img/ImgCatalogAccesories.svg" alt="accesories">
-                <div class="backroundCatalog">
-                    <img src="./img/bigBackround.svg" alt="none">
+                <img class="bigImgBlock" src="./img/ImgCatalogAccesories.svg" alt="accesories">
+                <div class="backroundCatalog bigBacroundCatalog">
+                    <img class="backroundBigImg" src="./img/bigBackround.svg" alt="none">
                     <div class="textCatalog">
                         <p>LUXIROUS & TRENDY</p>
                         <h3>ACCESORIES</h3>
                     </div>
                 </div>
             </div>
-    
         </section>
 
         <section class="catalogProduct containerB">
