--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
             <div class="menuNavigation">
                 <button class="headBtn"><img src="./img/HeadMenu.svg" alt="menu"></button>
-                <button class="headBtn"><img src="./img/HeadCabinet.svg" alt="cabinet"></button>
-                <button class="headBtn"><img src="./img/HeadShoppingCart.svg" alt="shoppingCart"></button>
+                <button class="headBtn hidden"><img src="./img/HeadCabinet.svg" alt="cabinet"></button>
+                <button class="headBtn hidden"><img src="./img/HeadShoppingCart.svg" alt="shoppingCart"></button>
             </div>
         </div>
     </header>
@@ -27,7 +27,7 @@
     <main class="main containerA">
         <section class="slogan containerA">
             <div class="imgMen sloganBlock containerB">
-                <img src="./img/MenOnPinckBackround.svg" alt="men">
+                <img class="hidden" src="./img/MenOnPinckBackround.svg" alt="men">
                 <div class="stickAndText containerB">
                     <h1 class="text">THE BRAND</h1>
                     <h2 class="text blackText">OF LUXERIOUS</h2>
