--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main class="main containerA">
         <section class="slogan containerA">
-            <div class="imgMen sloganBlock containerB">
+            <div class="imgMen sloganBlock">
                 <img class="hidden" src="./img/MenOnPinckBackround.svg" alt="men">
                 <div class="stickAndText containerB">
                     <h1 class="text">THE BRAND</h1>
