--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             </div>
 
             <div class="menuNavigation">
+                <div class="check hidden"><p>5</p></div>
+
                 <button class="headBtn"><img src="./img/HeadMenu.svg" alt="menu"></button>
                 <button class="headBtn hidden"><img src="./img/HeadCabinet.svg" alt="cabinet"></button>
                 <button class="headBtn hidden"><img src="./img/HeadShoppingCart.svg" alt="shoppingCart"></button>
@@ -91,7 +93,13 @@
             <div class="catalogProductBlock">
                 <div class="productBlock">
                     <div class="productImg">
+                        
+                        <div class="producktHover">
+                            <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                        </div>
+
                         <img src="./img/ImgProductMen1.svg" alt="men">
+
                             <div class="productText">
                                 <h5>ELLERY X M'O CAPSULE</h5>
                                 <p class="aboutText">
@@ -104,6 +112,11 @@
 
             <div class="productBlock">
                 <div class="productImg">
+
+                    <div class="producktHover">
+                        <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                    </div>
+
                     <img src="./img/ImgProductWomen1.svg" alt="woman">
                     <div class="productText">
                         <h5>ELLERY X M'O CAPSULE</h5>
@@ -117,6 +130,11 @@
 
             <div class="productBlock">
                 <div class="productImg">
+
+                    <div class="producktHover">
+                        <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                    </div>
+
                     <img src="./img/ImgProductMen2.svg" alt="men">
                     <div class="productText">
                         <h5>ELLERY X M'O CAPSULE</h5>
@@ -130,6 +148,11 @@
 
             <div class="productBlock">
                 <div class="productImg">
+
+                    <div class="producktHover">
+                        <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                    </div>
+
                     <img src="./img/ImgProductMen3.svg" alt="men">
                     <div class="productText">
                         <h5>ELLERY X M'O CAPSULE</h5>
@@ -143,6 +166,11 @@
 
             <div class="productBlock">
                 <div class="productImg">
+
+                    <div class="producktHover">
+                        <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                    </div>
+
                     <img src="./img/ImgProductWomen2.svg" alt="women">
                     <div class="productText">
                         <h5>ELLERY X M'O CAPSULE</h5>
@@ -156,6 +184,11 @@
 
             <div class="productBlock">
                 <div class="productImg">
+
+                    <div class="producktHover">
+                        <button><img src="./img/hoverIcon.svg" alt=""> Add to Cart</button>
+                    </div>
+
                     <img src="./img/ImgProductWomen3.svg" alt="women">
                     <div class="productText">
                         <h5>ELLERY X M'O CAPSULE</h5>
@@ -172,6 +205,81 @@
                 <button class="productBtn">Browse All Product</button>
             </div>
         </section>
+
+        <section class="information containerA">
+            <div class="contentInformation containerB">
+                <div class="delivery blockInformation">
+                    <img src="./img/delivery.svg" alt="delivery">
+                    <h5>Free Delivery</h5>
+                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.    
+                    </p>
+                </div>
+
+                <div class="sales blockInformation">
+                    <img src="./img/sales.svg" alt="sales">
+                    <h5>Sales & discounts</h5>
+                    <p>
+                        Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.
+                    </p>
+                </div>
+
+                <div class="quality blockInformation">
+                    <img src="./img/Quality.svg" alt="quality">
+                    <h5>Quality assurance</h5>
+                    <p>
+                        Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="subscribe containerA">
+            <div class="backroundSubscribe">
+                <div class="contentSubscribe containerB">
+                    <div class="comment ">
+                        <img src="./img/avatar.svg" alt="avatar">
+                        <p>
+                            “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i>a pulvinar purus condimentum“</i>
+                        </p>
+                    </div>
+
+                    <div class="inputText blockSubscribe">
+                        <h3>SUBSCRIBE</h3>
+                        <h6>FOR OUR NEWLETTER AND PROMOTION</h6>
+
+                        <div class="inputBtn blockSubscribe">
+                            <form action="#">
+                                <input class="form" type="email" placeholder="Enter Your Email">
+                            </form>
+
+                            <button class="subscribeBtn" type="submit">Subscribe</button>
+                        </div>
+                    </div>
+            </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <section class="backroundFooter containerA">
+            <div class="contentFooter containerB">
+                <div class="productMarker">
+                    <p>
+                        © 2022  Brand  All Rights Reserved.
+                    </p>
+                </div>
+
+                <div class="socialIcon">
+                    <a href="#"><img src="./img/icon1.svg" alt=""></a>
+
+                    <a href="#"><img src="./img/icon2.svg" alt=""></a>
+
+                    <a href="#"><img src="./img/icon3.svg" alt=""></a>
+
+                    <a href="#"><img src="./img/icon4.svg" alt=""></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
